examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beispiel-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: beispiel.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beispiel-clusterip
            port:
              number: 80
